# wikipedia-distance-rabbit-mq

./: .gitignore  Dockerfile  Makefile  README.md  setup.cfg
src/client/: __main__.py
src/server/: __main__.py
src/service/: Makefile  service_pb2.py  service_pb2_grpc.py
src/service/proto/: service.proto
src/wikipedia/: __init__.py  distance.py  testing.py  url_parsing.py  utils.py
src/worker/: __main__.py
