[metadata]
name = wikipedia-distance
version = 0.0.1
author = Chopik
author_email = ch0p1k3@yandex.ru
description = wikipedia-distance
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
    click
    simple-term-menu
    grpcio==1.43
    grpcio-tools==1.43
