[metadata]
name = wikipedia-distance
version = 0.0.1
author = Chopik
author_email = ch0p1k3@yandex.ru
description = wikipedia-distance
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

[options]
install_requires =
    aio-pika
    aiohttp
    beautifulsoup4
    click
    grpcio-tools==1.43
    grpcio==1.43
    pika
    simple-term-menu
